--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ h1 {
 footer {
 display: block;
 padding: 15px;
-background: gray;
+background: #666666;
 color: white;
 position: fixed;
 width: 100%;
