--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 h1 {
     color: black;
 }
@@ -10,4 +12,15 @@ color: white;
 position: fixed;
 width: 100%;
 bottom: 0;
+}
+
+body {
+padding: 80px;
+background: oldlace;
+
+}
+
+.container {
+    padding: 30px;
+    background: white;
 }
